<resources>
    <string name="app_name">Emotican</string>
    <string name="action_settings">Settings</string>
    <string name="hot">Hot</string>
    <string name="all">All</string>
    <string name="custom">Custom</string>
    <string name="other">Other</string>
    <string name="panda">Panda</string>
    <string name="beifang">Beifang</string>
    <string name="moxing">LittleMan</string>
    <string name="hyoko">Hyoko</string>
    <string name="yaoming">YaoMing</string>
    <string name="doge">Doge</string>
    <string name="huanzhu">HuanZhu</string>
    <string name="cat_gua">Cat</string>
    <string name="teletubbies">Teletubbies</string>

    <string-array name="all_shown_categories">
        <item>Panda</item>
        <item>Beifang</item>
        <item>LittleMan</item>
        <item>Hyoko</item>
        <item>YaoMing</item>
        <item>Doge</item>
        <item>HuanZhu</item>
        <item>Cat</item>
        <item>Teletubbies</item>
    </string-array>
    <string name="move">Move</string>
    <string name="gray">Gray</string>
    <string name="alpha">Alpha</string>
    <string name="faces">Faces</string>
    <string name="outfit">Outfit</string>
    <string name="text">A</string>
</resources>
